Update End Point

--- a/MGExportModule/MGExportModule.Web/Content/site/site.common.less
+++ b/MGExportModule/MGExportModule.Web/Content/site/site.common.less
@@ -35,3 +35,8 @@
     > .size { width: 850px; }
     .caption { width: 300px; }
 }
+
+.s-Common-UserTypeDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
